@@ -853,23 +853,50 @@ paramidentdecl:
   | identifier '[' expr ']'
   { $$ = NewAST(AST_ARRAYDECL, $1, $3); }
   | identifier '=' expr
-  { $$ = AstAssign($1, $3); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "default parameter values are a fastspin extension");
+      $$ = AstAssign($1, $3);
+  }
   | identifier '=' SP_LONG
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_long, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_long, $1);
+  }
   | identifier '=' '-' SP_LONG
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_long, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_long, $1);
+  }
   | identifier '=' '+' SP_LONG
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_unsigned_long, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_unsigned_long, $1);
+  }
   | identifier '=' SP_FLOAT
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_float, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_float, $1);
+  }
   | identifier '=' '@' SP_LONG
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_ptr_long, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_ptr_long, $1);
+  }
   | identifier '=' '@' SP_WORD
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_ptr_word, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_ptr_word, $1);
+  }
   | identifier '=' '@' SP_BYTE
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_ptr_byte, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_ptr_byte, $1);
+  }
   | identifier '=' SP_STRINGPTR
-  { $$ = NewAST(AST_DECLARE_VAR, ast_type_string, $1); }
+  {
+      LANGUAGE_WARNING(LANG_ANY, $1, "parameter types are a fastspin extension");
+      $$ = NewAST(AST_DECLARE_VAR, ast_type_string, $1);
+  }
   ;
 
 paramidentlist:
